Fixed alignment glitch on small height circumstances

--- a/style.css
+++ b/style.css
@@ -244,7 +244,8 @@ h3 {
 
 .ad {
   display: grid;
-  grid-template-rows: repeat(auto-fit, minmax(400px, 1fr));
+  grid-auto-rows: auto 1fr;
+  align-items: start;
   gap: 20px;
 }
 
